--- a/public/package.json
+++ b/public/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
-    "react-toolbox": "^1.2.1"
+    "react-router": "^2.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
