--- a/public/package.json
+++ b/public/package.json
@@ -11,9 +11,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "formsy-material-ui": "^0.5.0",
+    "formsy-react": "^0.18.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
-    "react-router": "^2.0.0"
+    "react-router": "^2.0.0",
+    "react-tap-event-plugin": "^1.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
