--- a/public/package.json
+++ b/public/package.json
@@ -15,6 +15,7 @@
     "formsy-react": "^0.18.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
+    "react-geosuggest": "^1.25.0",
     "react-gmaps": "^1.5.0",
     "react-router": "^2.0.0",
     "react-tap-event-plugin": "^1.0.0"
